After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 653970 - Fix build on OpenBSD
Fix build on OpenBSD
Status: RESOLVED FIXED
Product: gupnp-igd
Classification: Other
Component: General
0.16.x
Other OpenBSD
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-07-04 19:46 UTC by Jasper Lievisse Adriaanse
Modified: 2019-02-22 06:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix build on OpenBSD. (650 bytes, patch)
2011-07-04 19:46 UTC, Jasper Lievisse Adriaanse
none Details | Review

Description Jasper Lievisse Adriaanse 2011-07-04 19:46:16 UTC
Created attachment 191248 [details] [review]
Fix build on OpenBSD.

On OpenBSD headers don't include headers that include headers etcetc. So make it more clear that we require these headers. Fixes the build on OpenBSD.

Ok to push?
Comment 1 Olivier Crête 2011-07-14 14:46:21 UTC
Why do you move string.h ? I have a preference to put the system headers in one block and in alphabetic order
Comment 2 Jasper Lievisse Adriaanse 2011-07-14 14:54:56 UTC
That's just common practice (in OpenBSD). sys/* come before others, so headers like sys/types.h are included before any types declared there are used in other headers.
Comment 3 Olivier Crête 2013-06-24 22:34:33 UTC
Applied, thanks

commit 43b3c5344ba0f0cab3848864938ad0a0c93b49cf
Author: Jasper Lievisse Adriaanse <jasper@humppa.nl>
Date:   Mon Jul 4 19:46:00 2011 +0000

    Fix build on OpenBSD.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=653970