Fix build on OpenBSD.

https://bugzilla.gnome.org/show_bug.cgi?id=653970